static content added

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,5 @@
   "trailingComma": "es5",
   "printWidth": 80,
   "htmlWhitespaceSensitivity": "ignore",
-  "bracketSameLine": true
+  "bracketSameLine": false
 }
